--- a/fe-1/package.json
+++ b/fe-1/package.json
@@ -9,17 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@types/node": "18.11.9",
+		"@types/react": "18.0.25",
+		"@types/react-dom": "18.0.8",
 		"daisyui": "^2.38.1",
+		"draft-js": "^0.11.7",
 		"next": "13.0.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"recoil": "^0.7.6",
-		"typescript": "4.8.4",
-		"@types/node": "18.11.9",
-		"@types/react": "18.0.25",
-		"@types/react-dom": "18.0.8"
+		"typescript": "4.8.4"
 	},
 	"devDependencies": {
+		"@types/draft-js": "^0.11.9",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.27.0",
 		"eslint-config-next": "13.0.2",
