--- a/fe-2/.prettierrc.json
+++ b/fe-2/.prettierrc.json
@@ -2,5 +2,7 @@
 	"printWidth": 120,
 	"tabWidth": 4,
 	"useTabs": true,
-	"semi": true
+	"semi": true,
+	"jsxSingleQuote": true,
+	"singleQuote": true
 }
