--- a/fe-1/package.json
+++ b/fe-1/package.json
@@ -9,11 +9,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@tiptap/extension-bubble-menu": "^2.0.0-beta.202",
+		"@tiptap/extension-bullet-list": "^2.0.0-beta.202",
+		"@tiptap/extension-floating-menu": "^2.0.0-beta.202",
+		"@tiptap/extension-highlight": "^2.0.0-beta.202",
+		"@tiptap/extension-list-item": "^2.0.0-beta.202",
+		"@tiptap/extension-text-align": "^2.0.0-beta.202",
+		"@tiptap/react": "^2.0.0-beta.202",
+		"@tiptap/starter-kit": "^2.0.0-beta.202",
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.8",
 		"daisyui": "^2.38.1",
-		"draft-js": "^0.11.7",
 		"next": "13.0.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -21,7 +28,6 @@
 		"typescript": "4.8.4"
 	},
 	"devDependencies": {
-		"@types/draft-js": "^0.11.9",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.27.0",
 		"eslint-config-next": "13.0.2",
@@ -30,6 +36,7 @@
 		"eslint-plugin-react": "^7.31.10",
 		"postcss": "^8.4.18",
 		"prettier": "2.7.1",
+		"sass": "^1.56.1",
 		"tailwindcss": "^3.2.2"
 	}
 }
