--- a/fe-1/tsconfig.json
+++ b/fe-1/tsconfig.json
@@ -13,7 +13,8 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"incremental": true
+		"incremental": true,
+		"noImplicitThis": false
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/com-input-editor"],
 	"exclude": ["node_modules"]
